CSS/style.css
/* Initialisation des variables */
:root {
    /* Couleurs */
    --COULEUR_ACCENT: #0D9BD3; 
    --COULEUR_ACCENT_HOVER: #7ad6fa;
    --COULEUR_ACCENT_CONTRASTER: #51C4F0;
    --COULEUR_ACCENT_CONTRASTER_HOVER: #9CE1FD;
    
    --COULEUR_BACKGROUND: #000000;       
    --COULEUR_BACKGROUND_CARD: #232222;
    --COULEUR_BACKGROUND_CARD_HOVER: #373636; 

    --COULEUR_LUMIERE_CARD: #2c2b2b;

    --COULEUR_TEXT_PRINCIPAL: #FFFFFF;
    --COULEUR_TEXT_SECONDAIRE: #BDBDBD;

    /* Tailles & polices */
    --H0: 2.5rem; 
    --H1: 2rem;
    --H2: 1.6rem;
    --H3: 1.25rem;
    --P: 1rem;
    --P_SMALL: 0.875rem;

    --LINE_HEIGHT: 1.5;
    --FONT_FAMILY: "Zalando Sans SemiExpanded";
    --FONT_WEIGHT_BUTTON: 500;

    /* Arrondi des bordures */
    --BORDER: 1.25rem;
    --BORDER_SMALL: 0.625rem;

    /* Marges intérieur/extérieur (Basé sur 0.5rem) */
    --ESPACE_XXS: 0.25rem;   /* 4px */
    --ESPACE_XS: 0.5rem;   /* 8px */
    --ESPACE_S_SMALL: 0.9rem;     /* 16px */
    --ESPACE_S: 1rem;     /* 16px */
    --ESPACE_M: 1.5rem;   /* 24px */
    --ESPACE_L: 2rem;     /* 32px */
    --ESPACE_XL: 3rem;     /* 48px */

    /* Autres */
    --MAX_WIDTH: 1250px;
    --EPAISSEUR_BORDER: 2.5px;
    --DUREE_TRANSITION: 0.2s;

    /* Flèche vers le bas ComBox outils */
    --URL_FLECHE_ICON: url("../Outils/Icons/icon_fleche_sombre.svg");
    --URL_FLECHE_ICON_REVERSE: url("../Outils/Icons/icon_fleche_clair.svg");

    /* Couleur pour le hover des pastilles */
    --COULEUR_PASTILLES_0: #0D9BD3; 
    --COULEUR_PASTILLES_1: #fe504a; 
    --COULEUR_PASTILLES_2: #ff6aff; 
    --COULEUR_PASTILLES_3: #ba6fff; 
    --COULEUR_PASTILLES_4: #0CBB5BFF; 
    --COULEUR_PASTILLES_5: #0ac3a7; 
    --COULEUR_PASTILLES_6: #7bb8de;  
    --COULEUR_PASTILLES_7: #ea5084; 
    
    --COULEUR_PASTILLES_D1: #3a91ff;  
    --COULEUR_PASTILLES_D2: #f782f0;  
    
    --COULEUR_PASTILLES_D3: #1498e4;  
    --COULEUR_PASTILLES_D4: #fcaf6b;  
    
    --COULEUR_PASTILLES_D5: #a477fe;  
    --COULEUR_PASTILLES_D6: #4ce58c; 
 
    --COULEUR_PASTILLES_D7: #ffb423;  
    --COULEUR_PASTILLES_D8: #e73f01;  
}
/* Pour les icônes */
@font-face {
    font-family: 'Font-Sprintia';
    src:  url('../Assets/icons/Font-Sprintia.eot?7gygna');
    src:  url('../Assets/icons/Font-Sprintia.eot?7gygna#iefix') format('embedded-opentype'),
        url('../Assets/icons/Font-Sprintia.ttf?7gygna') format('truetype'),
        url('../Assets/icons/Font-Sprintia.woff?7gygna') format('woff'),
        url('../Assets/icons/Font-Sprintia.svg?7gygna#Font-Sprintia') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: block;
}
/* Police Anton */
@font-face {
    font-display: swap;
    font-family: 'Anton';
    font-style: normal;
    font-weight: 400;
    src: url('../Assets/fonts/anton-v27-latin-regular.woff2') format('woff2'); 
}
/* Police Zalando-sans-semiexpanded-regular */
@font-face {
    font-display: swap;
    font-family: 'Zalando Sans SemiExpanded';
    font-style: normal;
    font-weight: 400;
    src: url('../Assets/fonts/zalando-sans-semiexpanded-v2-latin-regular.woff2') format('woff2'); 
}
/* Police Zalando-sans-semiexpanded-regular font-weight : 500 */
@font-face {
    font-display: swap;
    font-family: 'Zalando Sans SemiExpanded';
    font-style: normal;
    font-weight: 500;
    src: url('../Assets/fonts/zalando-sans-semiexpanded-v2-latin-500.woff2') format('woff2'); 
}
/* Police Zalando-sans-semiexpanded-regular font-weight : 900 */
@font-face {
    font-display: swap;
    font-family: 'Zalando Sans SemiExpanded';
    font-style: normal;
    font-weight: 900;
    src: url('../Assets/fonts/zalando-sans-semiexpanded-v2-latin-900.woff2') format('woff2'); 
}
i {
    font-family: 'Font-Sprintia' !important;
    /*speak: never;*/
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.fs-icon_1RM:before {
    content: "\e900";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_a_propos:before {
    content: "\e901";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_accueil:before {
    content: "\e902";
}
.fs-icon_add:before {
    content: "\e903";
}
.fs-icon_charge_entrainement:before {
    content: "\e904";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_coach:before {
    content: "\e905";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_confidentialite:before {
    content: "\e906";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_epingler:before {
    content: "\e907";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_fermer:before {
    content: "\e908";
}
.fs-icon_historique:before {
    content: "\e909";
}
.fs-icon_ia:before {
    content: "\e90a";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_IMC:before {
    content: "\e90b";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_indulgence_course:before {
    content: "\e90c";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_licence:before {
    content: "\e90d";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_mail:before {
    content: "\e90e";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_menu:before {
    content: "\e90f";
}
.fs-icon_miles_km:before {
    content: "\e910";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_mode_clair_sombre:before {
    content: "\e911";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_modifier:before {
    content: "\e912";
}
.fs-icon_niveau_course:before {
    content: "\e913";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_outils:before {
    content: "\e914";
}
.fs-icon_parametres:before {
    content: "\e915";
}
.fs-icon_partager:before {
    content: "\e916";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_pause:before {
    content: "\e917";
}
.fs-icon_play:before {
    content: "\e918";
    color: var(--COULEUR_TEXT_PRINCIPAL);
}
.fs-icon_plus:before {
    content: "\e919";
}
/* ... */

